# AI-Auditor

./: .gitignore  .replit  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  start.sh  tailwind.config.ts  vite.config.ts
attached_assets/: Pasted-You-are-building-a-COMPLETE-WORKING-backend-for-an-AI-A_1767102778546.txt  Pasted-You-are-fixing-a-Replit-project-where-a-FastAPI-backend_1767107434895.txt  Pasted-You-are-updating-an-existing-AI-Auditor-backend-Current_1767104543604.txt  Pasted-You-are-updating-an-existing-AI-Auditor-backend-Problem_1767105706519.txt
backend/: alembic.ini  audit_engine.py  audit_prompts.py  auth.py  database.py  main.py  model_executor.py  models.py  remediation_playbook.py  report_builder.py  report_pdf.py  report_pdf_reportlab.py  requirements.txt  risk_scoring.py  route_metrics.py  routes.py  routes_audits.py  routes_auth.py  routes_connectors.py  routes_dashboard.py  routes_findings.py  routes_incidents.py  routes_interactions.py  routes_metrics.py  routes_models.oy  routes_models.py  routes_seed.py  scheduler.py  schemas.py
backend/alembic/: env.py
backend/metrics/: base.py  bias.py  compliance.py  drift.py  hallucination.py  phi.py  pii.py
backend/rule_engine/: __init__.py  base.py
backend/scoring/: __init__.py  metrics.py  normalization.py  regulations.py  regulatory_engine.py  severity_engine.py
client_backup/: index.html  tsconfig.json
frontend/: next.config.js  package-lock 2.json  package-lock.json  package.json
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
(+48 files in other folders)
